# DistributedVis

./: .gitignore  CMakeLists.txt  VDICompositingTest.cpp  main.cpp  makefile
TestLibrary/: CMakeLists.txt  JVMData.hpp  MPINatives.cpp  MPINatives.hpp  ManageRendering.cpp  ManageRendering.hpp  TestLiibrary.hpp  VDIParams.hpp  test.cpp
libLiV/: CMakeLists.txt  ManageRendering.hpp  VDIParams.hpp  libLiV.hpp  setupScene.cpp
